--- a/requirements.txt
+++ b/requirements.txt
@@ -133,6 +133,7 @@ tensorflow==2.4.0
 tensorflow-estimator==2.4.0
 termcolor==1.1.0
 terminado==0.9.2
+ipython==7.19.0
 tesseract==0.1.3
 testpath==0.4.4
 text-unidecode==1.3
